[gd_scene load_steps=15 format=3 uid="uid://cdf48axnnqyeg"]

[ext_resource type="Texture2D" uid="uid://cyb34jip2obce" path="res://icon.svg" id="1_bihqo"]
[ext_resource type="Script" uid="uid://ckhh5mk0d40bx" path="res://scripts/cards/rooms/room_card.gd" id="1_lnh00"]

[sub_resource type="Animation" id="Animation_gebks"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lvuwy"]
resource_name = "green"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_jsfnl"]
resource_name = "normal"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lnh00"]
resource_name = "occupied"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.94509804, 0.4, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dctut"]
resource_name = "red"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.13333334, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jqgu2"]
_data = {
&"RESET": SubResource("Animation_gebks"),
&"green": SubResource("Animation_lvuwy"),
&"normal": SubResource("Animation_jsfnl"),
&"occupied": SubResource("Animation_lnh00"),
&"red": SubResource("Animation_dctut")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4h16"]
size = Vector2(1, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aui1p"]
size = Vector2(1, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hq3rq"]
size = Vector2(1, 40.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01gvb"]
size = Vector2(56, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnh00"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m02it"]
size = Vector2(128, 128)

[node name="RoomCard" type="Node2D" groups=["room_cards"]]
script = ExtResource("1_lnh00")
metadata/_edit_horizontal_guides_ = [2225.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_bihqo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jqgu2")
}

[node name="DoorArea" type="Area2D" parent="." groups=["doors"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2(64.5, 0)
shape = SubResource("RectangleShape2D_y4h16")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="DoorArea"]
position = Vector2(40.0977, 64.49993)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_aui1p")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="DoorArea"]
position = Vector2(-39.9023, 64.49993)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_aui1p")

[node name="WallArea" type="Area2D" parent="." groups=["walls"]]

[node name="CollisionShape2D5" type="CollisionShape2D" parent="WallArea"]
position = Vector2(64.5, 32)
shape = SubResource("RectangleShape2D_hq3rq")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="WallArea"]
position = Vector2(64.5, -31.75)
shape = SubResource("RectangleShape2D_hq3rq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallArea"]
position = Vector2(0, 64.5)
shape = SubResource("RectangleShape2D_01gvb")

[node name="CenterArea" type="Area2D" parent="." groups=["center"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterArea"]
shape = SubResource("RectangleShape2D_lnh00")

[node name="MouseDetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetectArea"]
shape = SubResource("RectangleShape2D_m02it")

[connection signal="input_event" from="MouseDetectArea" to="." method="_on_mouse_detect_area_input_event"]
